force-app/main/default/objects/WRDB_CategoriesMatching__c/WRDB_CategoriesMatching__c.object-meta.xml
<CustomObject>
    <label>Wardrobing Categories Matching</label>
    <nameField>
        <label>Wardrobing Categories Matching	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wardrobing Categories Matchings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>