force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Category_1__c.field-meta.xml
<CustomField>
    <fullName>Category_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category 1</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Wardrobing Categories Matchings (Category 1)</relationshipLabel>
    <relationshipName>Wardrobing_Categories_Matchings1</relationshipName>
    <type>Lookup</type>
</CustomField>