force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Category_2__c.field-meta.xml
<CustomField>
    <fullName>Category_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category 2</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Wardrobing Categories Matchings (Category 2)</relationshipLabel>
    <relationshipName>Wardrobing_Categories_Matchings2</relationshipName>
    <type>Lookup</type>
</CustomField>