force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Category_3__c.field-meta.xml
<CustomField>
    <fullName>Category_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category 3</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Wardrobing Categories Matchings (Category 3)</relationshipLabel>
    <relationshipName>Wardrobing_Categories_Matchings3</relationshipName>
    <type>Lookup</type>
</CustomField>