force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/is_Default__c.field-meta.xml
<CustomField>
    <fullName>is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Default</label>
    <type>Checkbox</type>
</CustomField>