force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Master_Category__c.field-meta.xml
<CustomField>
    <fullName>Master_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Wardrobing Categories Matchings</relationshipLabel>
    <relationshipName>Wardrobing_Categories_Matchings</relationshipName>
    <type>Lookup</type>
</CustomField>