force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Price_point_3__c.field-meta.xml
<CustomField>
    <fullName>Price_point_3__c</fullName>
    <label>Price point 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>