force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Price_Point_Operator_1__c.field-meta.xml
<CustomField>
    <fullName>Price_Point_Operator_1__c</fullName>
    <label>Price Point Operator 1</label>
    <length>4</length>
    <type>Text</type>
</CustomField>