force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Price_Point_Operator__c.field-meta.xml
<CustomField>
    <fullName>Price_Point_Operator__c</fullName>
    <label>Price Point Operator</label>
    <length>4</length>
    <type>Text</type>
</CustomField>