force-app/main/default/objects/WRDB_CategoriesMatching__c/fields/Price_Point_up__c.field-meta.xml
<CustomField>
    <fullName>Price_Point_up__c</fullName>
    <label>Price Point up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>