force-app/main/default/objects/WRDB_CategoriesMatching__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_Category__c</columns>
    <columns>Category_1__c</columns>
    <columns>Category_2__c</columns>
    <columns>Category_3__c</columns>
    <columns>Category_4__c</columns>
    <columns>Category_5__c</columns>
    <columns>Gender__c</columns>
    <columns>isActive__c</columns>
    <columns>is_Default__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>